--- a/docs/docs-ref-autogen/outlook_1_1/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/outlook/office.messagecompose.yml
@@ -4,13 +4,13 @@ items:
     summary: |-
       [Office](xref:outlook!Office.Item:interface)的邮件撰写模式。<!-- -->.
 
-      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式`Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.1/office.context.mailbox.item)页。
+      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式 `Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅 [对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.1/office.context.mailbox.item) 页。
 
       父接口：
 
       - [ItemCompose](xref:outlook!Office.ItemCompose:interface)
 
-      - [消息](xref:outlook!Office.Message:interface)
+      - [邮件](xref:outlook!Office.Message:interface)
     name: Office.MessageCompose
     fullName: Office.MessageCompose
     langs:
@@ -43,7 +43,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作 (是否使用此 API 或 Outlook UI) 。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -132,7 +132,7 @@ items:
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~0:complex'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#addFileAttachmentAsync:member(2)'
@@ -143,7 +143,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作 (是否使用此 API 或 Outlook UI) 。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -179,14 +179,14 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~2:complex'
   - uid: 'outlook!Office.MessageCompose#addItemAttachmentAsync:member(1)'
     summary: |-
       将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
-      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法，`asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
+      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法， `asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
@@ -259,14 +259,14 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addItemAttachmentAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#addItemAttachmentAsync:member(2)'
     summary: |-
       将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
-      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法，`asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
+      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法， `asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
@@ -302,18 +302,14 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addItemAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#bcc:member'
     summary: |-
-      获取对象，该对象提供用于获取或更新邮件的密件抄送 (Bcc) 行上的收件人的方法。
+      获取一个对象，该对象提供用于获取或更新邮件的 **密件抄送** (密件抄送) 行上的收件人的方法。
 
-      默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
-
-      - 最多包含 500 个成员。
-
-      - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
+      根据客户端/平台 (（即 Windows、Mac 等） ) ，限制可能适用于可以获取或更新的收件人数。 有关更多详细信息，请参阅 [收件人](xref:outlook!Office.Recipients:interface) 对象。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -410,13 +406,9 @@ items:
           - 'outlook!Office.Body:interface'
   - uid: 'outlook!Office.MessageCompose#cc:member'
     summary: |-
-      提供对邮件的抄送 (Cc) 收件人的访问权限。 对象的类型和访问级别取决于当前项目的模式。
+      提供对邮件的抄送 (Cc) 收件人的访问权限。 对象的类型和访问权限级别取决于当前项目的模式。
 
-      该 `cc` 属性返回一个[收件人](xref:outlook!Office.Recipients:interface)对象，该对象提供用于获取或更新邮件的 **"抄送**" 行上的收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
-
-      - 最多包含 500 个成员。
-
-      - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
+      `cc` 属性返回一个 `Recipients` 对象，该对象提供用于获取或更新邮件的“**抄送**”行上收件人的方法。 但是，根据客户端/平台 (（即 Windows、Mac 等） ) ，限制可能适用于可以获取或更新的收件人数。 有关更多详细信息，请参阅 [收件人](xref:outlook!Office.Recipients:interface) 对象。
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
@@ -599,7 +591,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#loadCustomPropertiesAsync~0:complex'
         - id: userContext
@@ -671,7 +663,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
           type:
             - 'outlook!Office.MessageCompose#removeAttachmentAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#removeAttachmentAsync:member(2)'
@@ -706,7 +698,7 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
           type:
             - 'outlook!Office.MessageCompose#removeAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#subject:member'
@@ -756,13 +748,9 @@ items:
           - 'outlook!Office.Subject:interface'
   - uid: 'outlook!Office.MessageCompose#to:member'
     summary: |-
-      提供对邮件的“收件人”行上的收件人的访问权限。 对象的类型和访问级别取决于当前项目的模式。
+      提供对邮件的“**收件人**”行上的收件人的访问权限。 对象的类型和访问权限级别取决于当前项目的模式。
 
-      该 `to` 属性返回一个[收件人](xref:outlook!Office.Recipients:interface)对象，该对象提供用于获取或更新邮件的 "**收件人**" 行上的收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
-
-      - 最多包含 500 个成员。
-
-      - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
+      `to` 属性返回一个 `Recipients` 对象，该对象提供用于获取或更新邮件的“**收件人**”行上收件人的方法。 但是，根据客户端/平台 (（即 Windows、Mac 等） ) ，限制可能适用于可以获取或更新的收件人数。 有关更多详细信息，请参阅 [收件人](xref:outlook!Office.Recipients:interface) 对象。
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
