--- a/docs/docs-ref-autogen/outlook_1_3/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/outlook/office.messagecompose.yml
@@ -4,13 +4,13 @@ items:
     summary: |-
       [Office](xref:outlook!Office.Item:interface)的邮件撰写模式。<!-- -->.
 
-      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式`Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.3/office.context.mailbox.item)页。
+      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式 `Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅 [对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.3/office.context.mailbox.item) 页。
 
       父接口：
 
       - [ItemCompose](xref:outlook!Office.ItemCompose:interface)
 
-      - [消息](xref:outlook!Office.Message:interface)
+      - [邮件](xref:outlook!Office.Message:interface)
     name: Office.MessageCompose
     fullName: Office.MessageCompose
     langs:
@@ -51,7 +51,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作 (是否使用此 API 或 Outlook UI) 。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -140,7 +140,7 @@ items:
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~0:complex'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#addFileAttachmentAsync:member(2)'
@@ -151,7 +151,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作 (是否使用此 API 或 Outlook UI) 。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -187,14 +187,14 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~2:complex'
   - uid: 'outlook!Office.MessageCompose#addItemAttachmentAsync:member(1)'
     summary: |-
       将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
-      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法，`asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
+      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法， `asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
@@ -267,14 +267,14 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addItemAttachmentAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#addItemAttachmentAsync:member(2)'
     summary: |-
       将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
-      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法，`asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
+      `addItemAttachmentAsync` 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法，则使用一个参数调用方法， `asyncResult`<!-- -->，其中包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要，可以使用 options 参数将状态信息传递给回调方法。
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
@@ -310,18 +310,14 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addItemAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#bcc:member'
     summary: |-
-      获取对象，该对象提供用于获取或更新邮件的密件抄送 (Bcc) 行上的收件人的方法。
+      获取一个对象，该对象提供用于获取或更新邮件的 **密件抄送** (密件抄送) 行上的收件人的方法。
 
-      默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
-
-      - 最多包含 500 个成员。
-
-      - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
+      根据客户端/平台 (（即 Windows、Mac 等） ) ，限制可能适用于可以获取或更新的收件人数。 有关更多详细信息，请参阅 [收件人](xref:outlook!Office.Recipients:interface) 对象。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -418,13 +414,9 @@ items:
           - 'outlook!Office.Body:interface'
   - uid: 'outlook!Office.MessageCompose#cc:member'
     summary: |-
-      提供对邮件的抄送 (Cc) 收件人的访问权限。 对象的类型和访问级别取决于当前项目的模式。
+      提供对邮件的抄送 (Cc) 收件人的访问权限。 对象的类型和访问权限级别取决于当前项目的模式。
 
-      该 `cc` 属性返回一个[收件人](xref:outlook!Office.Recipients:interface)对象，该对象提供用于获取或更新邮件的 **"抄送**" 行上的收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
-
-      - 最多包含 500 个成员。
-
-      - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
+      `cc` 属性返回一个 `Recipients` 对象，该对象提供用于获取或更新邮件的“**抄送**”行上收件人的方法。 但是，根据客户端/平台 (（即 Windows、Mac 等） ) ，限制可能适用于可以获取或更新的收件人数。 有关更多详细信息，请参阅 [收件人](xref:outlook!Office.Recipients:interface) 对象。
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
@@ -487,7 +479,7 @@ items:
 
       在 Outlook 桌面客户端中，如果邮件是内嵌答复，则 close 方法将不起作用。
 
-      **注意**：在 web 上的 Outlook 中，如果该项目是一个约会，并且以前使用它进行了保存`saveAsync`<!-- -->，即使自上次保存项目后未发生更改，也会提示用户保存、放弃或取消。
+      **注意**：在 web 上的 Outlook 中，如果该项目是一个约会，并且以前使用它进行了保存 `saveAsync`<!-- -->，即使自上次保存项目后未发生更改，也会提示用户保存、放弃或取消。
 
       \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -546,7 +538,7 @@ items:
 
       如果没有选定内容，但光标位于正文或主题中，此方法将会为所选数据返回空字符串。如果选定的是字段，而不是正文或主题，则此方法返回 `InvalidSelection` 错误。
 
-      若要从回调方法访问所选数据，请调用`asyncResult.value.data`<!-- -->. 若要访问所选内容来自的源属性，请调用`asyncResult.value.sourceProperty`<!-- -->，这将是 `body` 或`subject`<!-- -->.
+      若要从回调方法访问所选数据，请调用 `asyncResult.value.data`<!-- -->. 若要访问所选内容来自的源属性，请调用 `asyncResult.value.sourceProperty`<!-- -->，这将是 `body` 或 `subject`<!-- -->.
 
       \[[API 集：邮箱 1.2](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -579,10 +571,10 @@ items:
       return:
         type:
           - void
-        description: 作为字符串的选定数据，其格式由`coercionType`<!-- -->.
+        description: 作为字符串的选定数据，其格式由 `coercionType`<!-- -->.
       parameters:
         - id: coercionType
-          description: 请求数据的格式。 即使`Text`<!-- -->，该方法以字符串的形式返回纯文本，同时删除所有 HTML 标记。 即使`Html`<!-- -->，则该方法将返回选定的文本，无论是纯文本还是 HTML。
+          description: 请求数据的格式。 即使 `Text`<!-- -->，该方法以字符串的形式返回纯文本，同时删除所有 HTML 标记。 即使 `Html`<!-- -->，则该方法将返回选定的文本，无论是纯文本还是 HTML。
           type:
             - 'outlook!Office.MessageCompose#getSelectedDataAsync~0:complex'
         - id: options
@@ -590,7 +582,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#getSelectedDataAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#getSelectedDataAsync:member(2)'
@@ -599,7 +591,7 @@ items:
 
       如果没有选定内容，但光标位于正文或主题中，此方法将会为所选数据返回空字符串。如果选定的是字段，而不是正文或主题，则此方法返回 `InvalidSelection` 错误。
 
-      若要从回调方法访问所选数据，请调用`asyncResult.value.data`<!-- -->. 若要访问所选内容来自的源属性，请调用`asyncResult.value.sourceProperty`<!-- -->，这将是 `body` 或`subject`<!-- -->.
+      若要从回调方法访问所选数据，请调用 `asyncResult.value.data`<!-- -->. 若要访问所选内容来自的源属性，请调用 `asyncResult.value.sourceProperty`<!-- -->，这将是 `body` 或 `subject`<!-- -->.
 
       \[[API 集：邮箱 1.2](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -631,14 +623,14 @@ items:
       return:
         type:
           - void
-        description: 作为字符串的选定数据，其格式由`coercionType`<!-- -->.
+        description: 作为字符串的选定数据，其格式由 `coercionType`<!-- -->.
       parameters:
         - id: coercionType
-          description: 请求数据的格式。 即使`Text`<!-- -->，该方法以字符串的形式返回纯文本，同时删除所有 HTML 标记。 即使`Html`<!-- -->，则该方法将返回选定的文本，无论是纯文本还是 HTML。
+          description: 请求数据的格式。 即使 `Text`<!-- -->，该方法以字符串的形式返回纯文本，同时删除所有 HTML 标记。 即使 `Html`<!-- -->，则该方法将返回选定的文本，无论是纯文本还是 HTML。
           type:
             - 'outlook!Office.MessageCompose#getSelectedDataAsync~2:complex'
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#getSelectedDataAsync~3:complex'
   - uid: 'outlook!Office.MessageCompose#itemType:member'
@@ -741,7 +733,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#loadCustomPropertiesAsync~0:complex'
         - id: userContext
@@ -891,7 +883,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
           type:
             - 'outlook!Office.MessageCompose#removeAttachmentAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#removeAttachmentAsync:member(2)'
@@ -926,7 +918,7 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
           type:
             - 'outlook!Office.MessageCompose#removeAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#saveAsync:member(1)'
@@ -965,7 +957,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#saveAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#saveAsync:member(2)'
@@ -1019,7 +1011,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#saveAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#setSelectedDataAsync:member(1)'
@@ -1060,11 +1052,11 @@ items:
           type:
             - string
         - id: options
-          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。 `coercionType`<!-- -->：如果是文本，则当前样式应用于 web 上的 Outlook 和桌面客户端。 如果字段是 HTML 编辑器，只会插入文本数据，即使数据为 HTML，也不例外。 如果 html 和字段支持 HTML （主题不），则当前样式应用于 web 上的 Outlook，并且默认样式应用于桌面客户端上的 Outlook 中。 如果该字段是文本字段，则返回 `InvalidDataFormat` 错误。 如果未设置 `coercionType`，则结果取决于该字段：如果该字段是 HTML，则使用 HTML；如果该字段是文本，则使用纯文本。
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。 `coercionType`<!-- -->：如果是文本，则当前样式应用于 web 上的 Outlook 和桌面客户端。 如果字段是 HTML 编辑器，只会插入文本数据，即使数据为 HTML，也不例外。 如果 html 和字段支持 HTML (主题不) ，则在 web 上的 Outlook 中应用当前样式，并在桌面客户端上的 Outlook 中应用默认样式。 如果该字段是文本字段，则返回 `InvalidDataFormat` 错误。 如果未设置 `coercionType`，则结果取决于该字段：如果该字段是 HTML，则使用 HTML；如果该字段是文本，则使用纯文本。
           type:
             - 'outlook!Office.MessageCompose#setSelectedDataAsync~0:complex'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#setSelectedDataAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#setSelectedDataAsync:member(2)'
@@ -1115,7 +1107,7 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#setSelectedDataAsync~2:complex'
   - uid: 'outlook!Office.MessageCompose#subject:member'
@@ -1165,13 +1157,9 @@ items:
           - 'outlook!Office.Subject:interface'
   - uid: 'outlook!Office.MessageCompose#to:member'
     summary: |-
-      提供对邮件的“收件人”行上的收件人的访问权限。 对象的类型和访问级别取决于当前项目的模式。
+      提供对邮件的“**收件人**”行上的收件人的访问权限。 对象的类型和访问权限级别取决于当前项目的模式。
 
-      该 `to` 属性返回一个[收件人](xref:outlook!Office.Recipients:interface)对象，该对象提供用于获取或更新邮件的 "**收件人**" 行上的收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
-
-      - 最多包含 500 个成员。
-
-      - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
+      `to` 属性返回一个 `Recipients` 对象，该对象提供用于获取或更新邮件的“**收件人**”行上收件人的方法。 但是，根据客户端/平台 (（即 Windows、Mac 等） ) ，限制可能适用于可以获取或更新的收件人数。 有关更多详细信息，请参阅 [收件人](xref:outlook!Office.Recipients:interface) 对象。
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
