--- a/docs/docs-ref-autogen/excel_1_9/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_9/toc.yml
@@ -139,7 +139,7 @@ items:
                 uid: 'excel!Excel.ConditionalFormatDirection:enum'
               - name: ConditionalFormatIconRuleType
                 uid: 'excel!Excel.ConditionalFormatIconRuleType:enum'
-              - name: Conditionalpresetcriteriarule
+              - name: ConditionalFormatPresetCriterion
                 uid: 'excel!Excel.ConditionalFormatPresetCriterion:enum'
               - name: ConditionalFormatRuleType
                 uid: 'excel!Excel.ConditionalFormatRuleType:enum'
@@ -219,7 +219,7 @@ items:
                 uid: 'excel!Excel.PivotFilterTopBottomCriterion:enum'
               - name: PivotLayoutType
                 uid: 'excel!Excel.PivotLayoutType:enum'
-              - name: Placement
+              - name: 位置
                 uid: 'excel!Excel.Placement:enum'
               - name: PrintComments
                 uid: 'excel!Excel.PrintComments:enum'
@@ -556,7 +556,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选
+          - name: 筛选器
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -580,7 +580,7 @@ items:
             uid: 'excel!Excel.HeaderFooter:class'
           - name: HeaderFooterGroup
             uid: 'excel!Excel.HeaderFooterGroup:class'
-          - name: Icon
+          - name: 图标
             uid: 'excel!Excel.Icon:interface'
           - name: IconSetConditionalFormat
             uid: 'excel!Excel.IconSetConditionalFormat:class'
@@ -628,7 +628,7 @@ items:
             uid: 'excel!Excel.PivotTableCollection:class'
           - name: PresetCriteriaConditionalFormat
             uid: 'excel!Excel.PresetCriteriaConditionalFormat:class'
-          - name: Range
+          - name: 范围
             uid: 'excel!Excel.Range:class'
           - name: RangeAreas
             uid: 'excel!Excel.RangeAreas:class'
@@ -690,7 +690,7 @@ items:
             uid: 'excel!Excel.SettingCollection:class'
           - name: SettingsChangedEventArgs
             uid: 'excel!Excel.SettingsChangedEventArgs:interface'
-          - name: 型号
+          - name: 形状
             uid: 'excel!Excel.Shape:class'
           - name: ShapeActivatedEventArgs
             uid: 'excel!Excel.ShapeActivatedEventArgs:interface'
@@ -710,13 +710,13 @@ items:
             uid: 'excel!Excel.ShowAsRule:interface'
           - name: SortField
             uid: 'excel!Excel.SortField:interface'
-          - name: Style
+          - name: 样式
             uid: 'excel!Excel.Style:class'
           - name: StyleCollection
             uid: 'excel!Excel.StyleCollection:class'
-          - name: Subtotals
+          - name: 分类汇总
             uid: 'excel!Excel.Subtotals:interface'
-          - name: Table
+          - name: 表格
             uid: 'excel!Excel.Table:class'
           - name: TableAddedEventArgs
             uid: 'excel!Excel.TableAddedEventArgs:interface'
@@ -756,7 +756,7 @@ items:
             uid: 'excel!Excel.WorkbookCreated:class'
           - name: WorkbookProtection
             uid: 'excel!Excel.WorkbookProtection:class'
-          - name: Worksheet
+          - name: 工作表
             uid: 'excel!Excel.Worksheet:class'
           - name: WorksheetActivatedEventArgs
             uid: 'excel!Excel.WorksheetActivatedEventArgs:interface'
@@ -832,7 +832,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -846,9 +846,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -860,7 +860,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -868,7 +868,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -876,7 +876,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -944,9 +944,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -958,7 +958,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -999,7 +999,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -1007,5 +1007,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
